testsuite/tests/typecheck/should_fail/T19187a.hs
{-# LANGUAGE FlexibleContexts #-}

module T19187a where

data T

instance Eq Int => Eq T
