testsuite/tests/typecheck/should_fail/T19187a.stderr

T19187a.hs:7:10: error: [GHC-22979]
    • The constraint ‘Eq Int’
        is no smaller than the instance head ‘Eq T’
    • In the instance declaration for ‘Eq T’
    Suggested fix:
      Perhaps you intended to use the ‘UndecidableInstances’ extension
